<resources>
    <string name="video">video</string>
    <string name="device">device</string>
    <string name="media">media</string>
    <string name="friend">friend</string>
    <string name="message">message</string>
    <string name="video_preview">video preview</string>
    <string name="view_choice">Screen</string>
    <string name="add_device">Add Device</string>
    <string name="image_file">Snapshot file</string>
    <string name="video_file">Video file</string>
    <string name="setting">setting</string>
    <string name="help">help</string>
    <string name="about">about</string>
    <string name="soft_desc">soft desc</string>
    <string name="ip_addr">IP</string>
    <string name="ptz_port">PTZ Port</string>
    <string name="video_port">Video Port</string>
    <string name="user_name">User Name</string>
    <string name="device_name">Device Name</string>
    <string name="user_pwd">Password</string>
    <string name="user_name_hit">Please input user name</string>
    <string name="device_name_hit">Please input device name</string>
    <string name="user_pwd_hit">Please input password</string>
    <string name="require">require</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="add_device_failed">Failed to add device!</string>
    <string name="add_device_succeed">Add device succeeded!</string>
    <string name="snapshot_succeed">Capture success</string>
    <string name="snapshot_failed">Capture failed</string>
    <string name="connect_device_failed">Connecting device failed!</string>
    <string name="login_device_failed">Failed to login device!</string>
    <string name="play_device_failed">Failed to playback device!</string>
    <string name="before_open_video_preview">Please start a video preview</string>
    <string name="zoom">Zoom</string>
    <string name="focus">Focus</string>
    <string name="iris">Iris</string>
    <string name="pdlg_search_device">Searching for devices…</string>
    <string name="pdlg_delete_device">Delete for devices…</string>
    <string name="no_any_video_in_directory">There is no video.</string>
    <string name="delete_local_video_tip">delete the device?</string>
    <string name="delete_local_video_success">delete device success</string>
    <string name="delete_local_video_fail">delete device failed</string>
    <string name="delete_device_all_video_tip">Are you sure you want to delete all recordings of the device do ?</string>
    <string name="action_settings">Settings</string>
    <string name="tv_ui_title">Interface Title</string>
    <string name="tv_welcome_title">Welcome</string>
    <string name="tv_user_register_title">User Registration</string>
    <string name="tv_login_title">Login</string>
    <string name="tv_video_title">Live View</string>
    <string name="tv_device_list_title">Device List</string>
    <string name="tv_device_info_title">Device Info.</string>
    <string name="tv_local_album_title">Local Picture</string>
    <string name="tv_local_video_title">Local Record</string>
    <string name="tv_feedback_title">User Feedback</string>
    <string name="tv_setting_title">System Settings</string>
    <string name="alarm_message_title">Alarm Message</string>
    <string name="tv_help_title">User Manual</string>
    <string name="tv_about_title">About</string>
    <string name="tv_logout">Logout</string>
    <string name="tv_version_info_prefix">Version:</string>
    <string name="tv_media_param">Media Param</string>
    <string name="tv_device_config">Device Config</string>
    <string name="tv_soft_description">Description</string>
    <string name="tv_crash_info">Upload log</string>
    <string name="tv_version_update">Version update</string>
    <string name="tv_contact">Contact us</string>
    <string name="tv_feedback">Feedback</string>
    <string name="check_new_version_please_wait">The new version is detected , please wait</string>
    <string name="no_new_version">Currently have the latest version.</string>
    <string name="check_new_version_timeout">The new version is detected timeout , please try again later.</string>
    <string name="td_code_tip_info">Auto scan QR code in the frame</string>
    <string name="tv_scane_td">Scan QR code</string>
    <string name="toast_insert_sdcard_msg">Please insert SD card</string>
    <string name="toast_open_video_preview_msg">Please start video preview first</string>
    <string name="tip_video_capture">&#8230;Snapshot&#8230;</string>
    <string name="tip_video_start_capture">&#8230;Start snapshot&#8230;</string>
    <string name="tip_video_capture_fail">Snapshot failed</string>
    <string name="tip_video_capture_success">Snapshot successfully, save path:%1$s</string>
    <string name="tip_video_capture_success2">Snapshot successfully</string>
    <string name="fvu_tip_open_voice">Audio on</string>
    <string name="fvu_tip_close_voice">Mute</string>
    <string name="fvu_tip_open_talk">Start talkback</string>
    <string name="fvu_tip_close_talk">Stop talkback</string>
    <string name="fvu_tip_open_voice_fail_invalid_audio_device">Open monitoring failed-device does not support the monitoring feature</string>
    <string name="fvu_tip_open_voice_fail_illegal_format_tip">Open monitoring failed-audio encode is invalid</string>
    <string name="tv_video_req_tip">Video requesting</string>
    <string name="tv_video_stop_tip">Video has been stopped</string>
    <string name="tv_video_play_tip">Video playing</string>
    <string name="tv_video_recv_data_tip">Loading video buffer</string>
    <string name="tv_video_wait_video_stream_tip">Wait for video stream&#8230;</string>
    <string name="tv_video_req_succeed_tip">Request video stream succeed</string>
    <string name="tv_video_req_fail_tip">Request video stream failed</string>
    <string name="tv_video_req_user_name_pwd_incorrect_tip">The device authentication failed, please confirm the account password!</string>
    <string name="tv_video_req_fail_media_param_incorrect_tip">Video request failed, the media parameters is not correct</string>
    <string name="tv_video_req_fail_device_resource_low_tip">There is too much preview, please try again later</string>
    <string name="tv_audio_input_occupy_tip">Audio input is occupied by other programs</string>
    <string name="tv_talk_fail_tip">Open talkback failed</string>
    <string name="tv_talk_success_tip">Open talkback success</string>
    <string name="tv_talk_fail_invalid_audio_device">Open talkback failed-device does not support the intercom feature</string>
    <string name="tv_talk_fail_illegal_format_tip">Open talkback failed-audio encode is invalid</string>
    <string name="tv_talk_fail_param_error_tip">Open talkback failed-received audio paramter failed</string>
    <string name="tv_talk_fail_data_error_tip">Open talkback failed-received callback data failed</string>
    <string name="tv_not_support_ptz_control_tip">The device does not support PTZ</string>
    <string name="tv_not_support_front_end_record">The device does not support front line playback</string>
    <string name="tv_ptz_left">PTZ Left</string>
    <string name="tv_ptz_right">PTZ Right</string>
    <string name="tv_ptz_up">PTZ Up</string>
    <string name="tv_ptz_down">PTZ Down</string>
    <string name="tv_ptz_leftup">PTZ Leftup</string>
    <string name="tv_ptz_leftdown">PTZ Leftdown</string>
    <string name="tv_ptz_rightup">PTZ Rightup</string>
    <string name="tv_ptz_rightdown">PTZ Rightdown</string>
    <string name="tv_zoom_out">Zoom-</string>
    <string name="tv_zoom_in">Zoom+</string>
    <string name="tv_focus_out">Focus-</string>
    <string name="tv_focus_in">Focus+</string>
    <string name="tv_iris_out">Iris-</string>
    <string name="tv_iris_in">Iris+</string>
    <string name="tv_zoom_text">Zoom</string>
    <string name="tv_focus_text">Focus</string>
    <string name="tv_iris_text">Iris</string>
    <string name="tv_set_preset">Set preset</string>
    <string name="tv_call_preset">Call preset</string>
    <string name="tv_get_preset">Get Preset</string>
    <string name="tv_del_preset">Delete Preset</string>
    <string name="hit_input_preset">Input ( 1–255 ) preset point</string>
    <string name="set_preset_succeed">Set preset success</string>
    <string name="call_preset_succeed">Call presets success</string>
    <string name="del_preset_succeed">Delete presets success</string>
    <string name="get_preset_no_data">The device is no preset information</string>
    <string name="change_stream_type">Stream</string>
    <string name="change_video_view">View</string>
    <string name="choice_stream">Stream</string>
    <string name="dlg_delete_picture_tip">Be sure to delete?</string>
    <string name="album_no_vaild_file_path">Invalid path</string>
    <string name="album_no_vaild_picture">Invalid picture</string>
    <string name="album_no_any_picture">There is no picture.</string>
    <string name="album_clear_all_sure_tip">Be sure to empty local picture?</string>
    <string name="album_clear_ok_tip">Local picture has been emptied.</string>
    <string name="not_open_file_use_third_party_app">Temporarily unable to open the file, you can use third-party applications open</string>
    <string name="not_app_execute_action">No application can perform this action.</string>
    <string name="dlg_tip">Prompt:</string>
    <string name="sure">OK</string>
    <string name="save">Save</string>
    <string name="more">More</string>
    <string name="hide">Hide</string>
    <string name="add">Add</string>
    <string name="back">Return</string>
    <string name="login">Login</string>
    <string name="delete">Delete</string>
    <string name="logoff">Logout</string>
    <string name="close">Close</string>
    <string name="edit">Edit</string>
    <string name="flush">Flush</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="download">Download</string>
    <string name="press_talk">Press Talk</string>
    <string name="iknow">I know</string>
    <string name="tv_main_stream">Main</string>
    <string name="tv_sub_stream">Sub</string>
    <string name="tv_time_position">Time position</string>
    <string name="tv_time_format">Time format</string>
    <string name="tv_title_position">Title position</string>
    <string name="tv_title_info">Title information</string>
    <string name="tv_time_lt">LT</string>
    <string name="tv_time_rt">RT</string>
    <string name="tv_time_lb">LB</string>
    <string name="tv_time_rb">RB</string>
    <string name="tv_title_lt">LT</string>
    <string name="tv_title_rt">RT</string>
    <string name="tv_title_lb">LB</string>
    <string name="tv_title_rb">RB</string>
    <string name="login_account">User name</string>
    <string name="login_account_hint_text">Input username</string>
    <string name="login_password">Password</string>
    <string name="login_password_hint_text">Input password</string>
    <string name="login_login">Login</string>
    <string name="login_register">Register</string>
    <string name="login_forget_password">Retrieve</string>
    <string name="login_more">More</string>
    <string name="forget_password">Retrieve</string>
    <string name="forget_account_hint_text">Email/Phone No.</string>
    <string name="forget_password_hint_text">New password</string>
    <string name="forget_password_verify_hint_text">Confirm password</string>
    <string name="forget_verify_code_hint_text">Code</string>
    <string name="forget_gain_verify_code_hint_text">Send auth code</string>
    <string name="forget_reset_password">Reset password</string>
    <string name="feedback_contact_info">Contact info</string>
    <string name="feedback_contact_hint">Please leave your contact information</string>
    <string name="feedback_content_info">Contact info</string>
    <string name="feedback_content_hint">Please describe your feedback information (up to 128 characters)</string>
</resources>