<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include
            android:id="@+id/llTitle"
            layout="@layout/global_title" />

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:stretchColumns="0"
            android:background="@color/st_ptz_bg">
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp">
            <TextView
                    android:id="@+id/tv_time_position"
                    style="@style/media_param_ui_textView"
                    android:text="@string/tv_time_position" />
            <RadioGroup
                    android:id="@+id/btn_group_time_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal">
                <RadioButton
                        android:id="@+id/btn_time_lt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_time_lt"
                        android:textSize="10sp"/>
                <RadioButton
                        android:id="@+id/btn_time_rt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_time_rt"
                        android:textSize="10sp"/>
                <RadioButton
                        android:id="@+id/btn_time_lb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_time_lb"
                        android:textSize="10sp"/>
                <RadioButton
                        android:id="@+id/btn_time_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_time_rb"
                        android:textSize="10sp"/>
            </RadioGroup>
        </TableRow>
        <TableRow>
            <TextView
                    android:id="@+id/tv_time_format"
                    style="@style/media_param_ui_textView"
                    android:text="@string/tv_time_format"/>
            <Spinner
                    android:id="@+id/sp_time_format"
                    style="@style/media_param_ui_spinner"
                    android:layout_marginLeft="@dimen/big_interval"
                    android:entries="@array/time_format"
                    android:layout_weight="1"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp">
            <TextView
                    android:id="@+id/tv_title_position"
                    style="@style/media_param_ui_textView"
                    android:text="@string/tv_title_position" />
            <RadioGroup
                    android:id="@+id/btn_group_title_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal">
                <RadioButton
                        android:id="@+id/btn_title_lt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_title_lt"
                        android:textSize="10sp"/>
                <RadioButton
                        android:id="@+id/btn_title_rt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_title_rt"
                        android:textSize="10sp"/>
                <RadioButton
                        android:id="@+id/btn_title_lb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_title_lb"
                        android:textSize="10sp"/>
                <RadioButton
                        android:id="@+id/btn_title_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_title_rb"
                        android:textSize="10sp"/>
            </RadioGroup>
        </TableRow>
        <TableRow>
            <TextView
                    android:id="@+id/tv_title_info"
                    style="@style/media_param_ui_textView"
                    android:text="@string/tv_title_info"/>
            <com.seetong.app.seetong.ui.ext.RegexpEditText
                    android:id="@+id/ret_title_info"
                    style="@style/media_param_ui_edit_text"
                    android:layout_marginLeft="@dimen/big_interval"
                    android:layout_weight="1"/>
        </TableRow>
    </TableLayout>

</LinearLayout>