<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlRootTitle"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:background="@drawable/tps_tabbar"
    android:padding="5dp">

    <Button
        android:id="@+id/btnLeft"
        style="@style/leftAndRightTitleBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:text="@string/back"
        android:visibility="gone" />

    <!-- android:layout_toLeftOf="@+id/btnRight" android:layout_toRightOf="@+id/btnLeft" -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/tv_ui_title"
        android:textColor="@color/green"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnRight"
        style="@style/leftAndRightTitleBtn"
        android:layout_alignParentRight="true"
        android:text="@string/save"
        android:visibility="gone" />

</RelativeLayout>