<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_select_stream_type"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@android:color/white"
    android:visibility="gone">
    <TextView
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:text="@string/choice_stream"
        android:textSize="@dimen/title_font_size"
        android:gravity="center_vertical"
        android:background="@android:color/white"
        android:layout_marginLeft="5sp"
        android:layout_weight="1"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp">
        <RadioButton
            android:id="@+id/btn_main_stream"
            style="@style/btn_video_num_choice"
            android:text="@string/tv_main_stream"/>
        <RadioButton
            android:id="@+id/btn_sub_stream"
            style="@style/btn_video_num_choice"
            android:text="@string/tv_sub_stream"
            android:checked="true"/>
        </RadioGroup>
</LinearLayout>