<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:background="@drawable/tps_background"
                tools:context="com.seetong5.app.seetong.ui.LoginActivity">

    <ImageView
            android:id="@+id/seetong_logo"
            android:src="@drawable/tps_login_logo"
            android:layout_centerHorizontal="true"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:layout_width="150dp"
            android:layout_height="150dp" />

    <RelativeLayout
            android:id="@+id/mix_account"
            android:layout_below="@+id/seetong_logo"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/login_account"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <com.seetong5.app.seetong.ui.ext.RegexpEditText
                android:id="@+id/login_account"
                android:layout_marginLeft="80dp"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_account_hint_text"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                android:textColorHint="#dddddd" />
    </RelativeLayout>

    <ImageView
            android:id="@+id/account_line"
            android:src="@drawable/line"
            android:layout_below="@+id/mix_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <RelativeLayout
            android:id="@+id/mix_password"
            android:layout_below="@+id/account_line"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/login_password"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <com.seetong5.app.seetong.ui.ext.RegexpEditText
                android:id="@+id/login_password"
                android:layout_marginLeft="80dp"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_hint_text"
                android:textSize="15sp"
                android:inputType="textPassword"
                android:textColorHint="#dddddd"/>

        <ImageButton
                android:id="@+id/login_hide_password"
                android:layout_marginLeft="290dp"
                android:src="@drawable/tps_hide_password_02"
                android:background="#00000000"
                android:scaleType="fitXY"
                android:layout_width="24dp"
                android:layout_height="16dp"/>
    </RelativeLayout>

    <ImageView
            android:id="@+id/password_line"
            android:src="@drawable/line"
            android:layout_below="@+id/mix_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
            android:id="@+id/login_login"
            android:text="@string/login_login"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:background="@drawable/tps_login_btn"
            android:layout_below="@+id/password_line"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="45dp" />

    <LinearLayout
            android:id="@+id/mix_button"
            android:layout_below="@+id/login_login"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/login_register"
                android:text="@string/login_register"
                android:textSize="15sp"
                android:textColor="#919191"
                android:background="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        <Button
                android:id="@+id/login_forget"
                android:text="@string/login_forget_password"
                android:textSize="15sp"
                android:textColor="#919191"
                android:background="#00000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
            android:id="@+id/login_more"
            android:text="@string/login_more"
            android:textSize="12sp"
            android:textColor="#919191"
            android:layout_centerHorizontal="true"
            android:background="#00000000"
            android:layout_marginTop="180dp"
            android:layout_below="@+id/mix_button"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
</RelativeLayout>
