<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/forget_top_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/tps_register_tabbar"
            android:layout_gravity="center_horizontal">

        <ImageButton
                android:id="@+id/forget_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitXY"
                android:background="#00000000"
                android:src="@drawable/tps_register_back"
                android:layout_marginLeft="25dp"
                android:layout_centerVertical="true" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textSize="20sp"
                android:textColor="@color/green"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/forget_medim_frame"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

        <EditText
                android:id="@+id/forget_user"
                android:background="@drawable/tps_register_txtview_bg_m"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/forget_account_hint_text"
                android:textSize="12sp"
                android:textColorHint="#dddddd"
                android:inputType="textEmailAddress"/>

        <EditText
                android:id="@+id/forget_password"
                android:layout_marginTop="15dp"
                android:background="@drawable/tps_register_txtview_bg_m"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/forget_password_hint_text"
                android:textSize="12sp"
                android:textColorHint="#dddddd"
                android:inputType="textPassword"/>

        <EditText
                android:id="@+id/forget_confirm_password"
                android:layout_marginTop="15dp"
                android:background="@drawable/tps_register_txtview_bg_m"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/forget_password_verify_hint_text"
                android:textSize="12sp"
                android:textColorHint="#dddddd"
                android:inputType="textPassword"/>

        <LinearLayout
                android:id="@+id/forget_verify_frame"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp">

            <EditText
                    android:id="@+id/forget_verify_code"
                    android:background="@drawable/tps_register_txtview_bg_s"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:hint="@string/forget_verify_code_hint_text"
                    android:textSize="12sp"
                    android:textColorHint="#dddddd"
                    android:layout_weight="2"
                    android:inputType="number"/>

            <TextView
                    android:text="       "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/forget_verify_button"
                    android:text="@string/forget_gain_verify_code_hint_text"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:background="@drawable/tps_register_loginbtn"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"/>
        </LinearLayout>

        <Button
                android:id="@+id/forget_reset_password"
                android:text="@string/forget_reset_password"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:layout_marginTop="15dp"
                android:background="@drawable/tps_register_loginbtn"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

    </LinearLayout>

</LinearLayout>